# cerebrate-file

./: .gitignore  CHANGELOG.md  CHANGELOG2.md  CLAUDE.md  DEPENDENCIES.md  PLAN.md  README.md  REVIEW.md  TODO.md  WORK.md  build.sh  llms.txt  md.txt  pyproject.toml  test1.sh  test2.sh  test_retry_mechanism.py  testapi.py
.github/workflows/: push.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 188dff31-a3d0-4122-af58-2a7997d1e9ed.json  2832738d-8d0c-4ea6-a943-1b14cbfcc7a4.json  3d0b7236-3726-4599-9b42-9f9c952308a2.json  54e35513-2805-416d-9dd6-5ec0d63b7aa7.json  63a21630-06a0-4d81-bc8e-e64a6c0a4433.json  f55db7fa-d04d-4ef9-9073-a96356722100.json
docs/: Gemfile  README.md  _config.yml  api-reference.md  cli-reference.md  configuration.md  development.md  examples.md  index.md  installation.md  quick-start.md  troubleshooting.md  usage.md
issues/: 101.md  102.txt  103.txt  104.txt  105.txt  201.txt  202.txt  203.txt  204.md  305.md
old/: SPEC.md  cereproc.py
src/cerebrate_file/: __init__.py  __main__.py  api_client.py  cerebrate_file.py  chunking.py  cli.py  config.py  constants.py  continuity.py  default_config.toml  error_recovery.py  file_utils.py  models.py  prompt_library.py  recursive.py  settings.py  tokenizer.py  ui.py  validators.py
src/cerebrate_file/prompts/: README.md  fix-pdf-extracted-text.xml
testdata/: test.sh  test1.md  test1a.md  test1a_fixed.md  test1a_verbose.md  test_prompt.txt
tests/: test_api_retry.py  test_brace_patterns.py  test_cerebrate_file.py  test_chunking.py  test_cli_streams.py  test_constants.py  test_error_recovery.py  test_file_utils.py  test_force_option.py  test_integration.py  test_issue_104.py  test_models.py  test_package.py  test_pre_screening.py  test_pre_screening_integration.py  test_prompt_library.py  test_recursive.py  test_recursive_integration.py  test_sample.txt  test_tokenizer.py  test_ui.py  test_validators.py  test_zero_output_guard.py
